fix: fix visibility of tooltips inside menu when closed

--- a/front/src/views/components/common/Tooltip/style.css
+++ b/front/src/views/components/common/Tooltip/style.css
@@ -2,8 +2,8 @@
     border: 1px solid var(--color-neutral-base);
     box-shadow: var(--shadow-outer-2);
     background: var(--color-neutral-light-2);
-    position: absolute;
-    z-index: 1;
+    position: fixed;
+    z-index: 8;
     padding: 8px;
     width: auto;
 }
